# llmll

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  LLMLL.md  Makefile  README.md  SPEC-GAPS-Response.md  implementation_plan.md
analysis/: 20260311_113024_LLMLL_Review.md  20260311_113024_LLMLL_Review_v2.md  20260311_113024_SMT_Lean_Analysis.md
compiler/: llmll.cabal  package.yaml  stack.yaml  test1.llmll  test2.llmll
docs/: agent-orchestration.md  compiler-changes.md  compiler-team-brief-laws.md  compiler-team-roadmap.md  compiler-team-v07-tier2-activities.md  effectful-wasm-spike.md  getting-started.md  json-ast-versioning.md  known-good-patterns.md  llmll-ast.schema.json  one-pager.md  orchestrator-walkthrough.md  research-track.md  rust-codegen-recommendations.md  sketch-compiler-handoff.md  sketch-implementation-guide.md  wasm-compat-report.md  wasm-poc-report.md
examples/: hangman.llmll  hangman_complete.llmll  my_ttt.llmll  tictactoe.llmll  ttt_3.llmll  v0.3-exercise-problems.md  withdraw.llmll
examples/todo_service/: Cargo.toml  IMPLEMENTATION_NOTES.md
examples/todo_service/src/: lib.rs  main.rs  todo.llmll
examples/todo_service/src/ffi/: atomic_fs.rs  chrono.rs  env.rs  mod.rs  serde_json.rs  std.rs  tempfile.rs  timer.rs  todo_json.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
tools/llmll-orchestra/: README.md  pyproject.toml
tools/llmll-orchestra/llmll_orchestra/: __init__.py  __main__.py  agent.py  compiler.py  graph.py  lead_agent.py  orchestrator.py  quality.py
tools/llmll-orchestra/tests/: test_lead_agent.py  test_orchestrator_e2e.py
(+171 files in other folders)
