[package]
name = "llmll-runtime"
version = "0.1.0"
edition = "2021"
description = "LLMLL runtime: capability sandbox, event log, deterministic replay"

[lib]
name = "llmll_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]

# Pin getrandom to avoid edition2024 requirement
[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom", tag = "v0.2.15" }


[profile.release]
opt-level = "s"
