[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.0", features = ["full"] }

[lib]
name = "todo"
path = "src/lib.rs"

[[bin]]
name = "todo"
path = "src/main.rs"
